Reduces the number of items that are announced as clickable by Jaws or NVDA.

An element gets the click action when there is an anchor or an element with a click listener in its ancestry chain. For the latter case this change exposes a different action name, "click_ancestor", on Windows to stop Windows screen readers unnecessarily announcing many items as clickable.
Bug: 689201
R=dmazzoni@chromium.org, aleventhal@chromium.org
TESTED=Manually with NVDA, browser test, layout test

Change-Id: I19ed8c53861b47e7f5fbe884c474a1c07afee916