third_party/WebKit/Source/modules/accessibility/AXEnums.h
@@ -140,6 +140,13 @@ enum class AXDefaultActionVerb {
   kActivate,
   kCheck,
   kClick,
+
+  // A click will be performed on one of the object's ancestors.
+  // This happens when the object itself is not clickable, but one of its
+  // ancestors has click handlers attached which are able to capture the click
+  // as it bubbles up.
+  kClickAncestor,
+
   kJump,
   kOpen,
   kPress,
