third_party/WebKit/Source/modules/accessibility/AXObject.cpp
@@ -1366,7 +1366,8 @@ AccessibilityOrientation AXObject::Orientation() const {
 }
 
 AXDefaultActionVerb AXObject::Action() const {
-  if (!ActionElement())
+  Element* action_element = ActionElement();
+  if (!action_element)
     return AXDefaultActionVerb::kNone;
 
   // TODO(dmazzoni): Ensure that combo box text field is handled here.
@@ -1396,7 +1397,9 @@ AXDefaultActionVerb AXObject::Action() const {
     case kPopUpButtonRole:
       return AXDefaultActionVerb::kOpen;
     default:
-      return AXDefaultActionVerb::kClick;
+      if (action_element == GetNode())
+        return AXDefaultActionVerb::kClick;
+      return AXDefaultActionVerb::kClickAncestor;
   }
 }
 
